--- a/index.html
+++ b/index.html
@@ -2,20 +2,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="./css/styles.css">
     <title>facebook</title>
 </head>
 <body>
-    <div class="main">
-        <div class="content">
+    <div class="container">
+        <div class="row">
+          <div class="col">
             <img src="./images/facebook.svg" alt="facebook-logo">
             <h2>Connect with friends and the world around you on Facebook.</h2>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+            <form>
+                <div class="form-group">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Phone Number">
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <button type="login" class="btn btn-primary">Log In</button>
+                <button type="login" class="btn btn-link">Forgot account?</button>
+                <button type="login" class="btn btn-success">Create New Account</button>
+              </form>
+              </div>
+          </div>
+        </div>
+
+    <!-- <div class="main">
+        <div class="content">
+           
         </div>
         <div class="card">
 
         </div>
-    </div>
+    </div> -->
     
 </body>
 <script type="module" src="./script.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
