first half completed

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div class="row">
-          <div class="col">
-            <img src="./images/facebook.svg" alt="facebook-logo">
-            <h2>Connect with friends and the world around you on Facebook.</h2>
+          <div id="row1" class="col">
+            <img id="fb-image" src="./images/facebook.svg" alt="facebook-logo">
+            <h2 id="fb-text">Connect with friends and the world around you on Facebook.</h2>
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
@@ -27,8 +27,10 @@
                 <button type="login" class="btn btn-success">Create New Account</button>
               </form>
               </div>
+              <p><b>Create a Page</b> for a celebrity, band or business.</p>
           </div>
         </div>
+    </div>
 
     <!-- <div class="main">
         <div class="content">
