--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <img id="fb-image" src="./images/facebook.svg" alt="facebook-logo">
             <h2 id="fb-text">Connect with friends and the world around you on Facebook.</h2>
           </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
+          <div id="row2" class="col">
+            <div id="row2-inside" class="card">
             <form>
-                <div class="form-group">
+                <div id="input-credentials1" class="form-group">
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Phone Number">
                 </div>
-                <div class="form-group">
+                <div id="input-credentials2" class="form-group">
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <button type="login" class="btn btn-primary">Log In</button>
