--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <div id="input-credentials2" class="form-group">
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
-                <button type="login" class="btn btn-primary">Log In</button>
-                <button type="login" class="btn btn-link">Forgot account?</button>
-                <button type="login" class="btn btn-success">Create New Account</button>
+                <button id="login-btn" type="login" class="btn btn-primary">Log In</button>
+                <button id="forget-btn" type="login" class="btn btn-link">Forgot account?</button>
+                <div id="line"></div>
+                <button id="create-btn" type="login" class="btn btn-success">Create New Account</button>
               </form>
               </div>
               <p><b>Create a Page</b> for a celebrity, band or business.</p>
