--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div id="row2-inside" class="card">
             <form>
                 <div id="input-credentials1" class="form-group">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Phone Number">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 55px;">
                 </div>
                 <div id="input-credentials2" class="form-group">
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="height: 55px;">
                 </div>
                 <button id="login-btn" type="login" class="btn btn-primary">Log In</button>
                 <button id="forget-btn" type="login" class="btn btn-link">Forgot account?</button>
@@ -28,20 +28,11 @@
                 <button id="create-btn" type="login" class="btn btn-success">Create New Account</button>
               </form>
               </div>
-              <p><b>Create a Page</b> for a celebrity, band or business.</p>
+              <div id="small-margin"></div>
+              <p id="outside-text" ><b>Create a Page</b> for a celebrity, band or business.</p>
           </div>
         </div>
     </div>
-
-    <!-- <div class="main">
-        <div class="content">
-           
-        </div>
-        <div class="card">
-
-        </div>
-    </div> -->
-    
 </body>
 <script type="module" src="./script.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
