--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
     <link rel="stylesheet" href="./css/styles.css">
     <title>facebook</title>
+    <script>
+      $(document).ready(function(){
+        var user,pass;
+        $("#submit").click(function(){
+          user=$("#user").val();
+          pass=$("#password").val();
+          $.post("http://localhost:3000/login",{user: user,password: pass}, function(data){
+            if(data==='yes') {
+                alert("login success");
+              }
+          });
+        });
+      });
+    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">  </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -17,10 +33,10 @@
             <div id="row2-inside" class="card">
             <form>
                 <div id="input-credentials1" class="form-group">
-                  <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 52px;">
+                  <input class="form-control" id="user" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 52px;">
                 </div>
                 <div id="input-credentials2" class="form-group">
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="height: 52px;">
+                  <input type="password" class="form-control" id="password" placeholder="Password" style="height: 52px;">
                 </div>
                 <button id="login-btn" type="login" class="btn btn-primary">Log In</button>
                 <button id="forget-btn" type="login" class="btn btn-link">Forgot account?</button>
@@ -33,7 +49,5 @@
           </div>
         </div>
     </div>
-</body>
-<script type="module" src="./script.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
