--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <title>facebook</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
           <div id="row1" class="col">
-            <img id="fb-image" src="./images/facebook.svg" alt="facebook-logo">
+            <img id="fb-image" src="./facebook.svg" alt="facebook-logo">
             <h2 id="fb-text">Connect with friends and the world around you on Facebook.</h2>
           </div>
           <div id="row2" class="col">
@@ -34,5 +34,7 @@
         </div>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="./script.js"></script>
 </html>
