--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> 
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
     <title>facebook</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
           <div id="row1" class="col">
-            <img id="fb-image" src="./facebook.svg" alt="facebook-logo">
+            <img id="fb-image" src="static/facebook.svg" alt="facebook-logo">
             <h2 id="fb-text">Connect with friends and the world around you on Facebook.</h2>
           </div>
           <div id="row2" class="col">
             <div id="row2-inside" class="card">
-            <form>
-                <div id="input-credentials1" class="form-group">
-                  <input class="form-control" id="user" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 52px;">
-                </div>
-                <div id="input-credentials2" class="form-group">
-                  <input type="password" class="form-control" id="password" placeholder="Password" style="height: 52px;">
-                </div>
-                <button id="login-btn" type="login" class="btn btn-primary">Log In</button>
+            <form action="/" method="POST">
+              <div id="input-credentials1" class="form-group">
+                <input class="form-control" id="user" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 52px;">
+              </div>
+              <div id="input-credentials2" class="form-group">
+                <input type="password" class="form-control" id="password" placeholder="Password" style="height: 52px;">
+              </div>
+                <input type="submit" value="Login" id="login-btn" class="btn btn-primary">
                 <button id="forget-btn" type="login" class="btn btn-link">Forgot account?</button>
-                <div id="line"></div>
-                <button id="create-btn" type="login" class="btn btn-success">Create New Account</button>
-              </form>
+              <div id="line"></div>
+              <button id="create-btn" type="login" class="btn btn-success">Create New Account</button>
+            </form>
               </div>
               <div id="small-margin"></div>
               <p id="outside-text" ><b>Create a Page</b> for a celebrity, band or business.</p>
@@ -36,5 +36,5 @@
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="./script.js"></script>
+  <script src="static/script.js"></script>
 </html>
