--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div id="row2-inside" class="card">
             <form action="/" method="POST">
               <div id="input-credentials1" class="form-group">
-                <input class="form-control" id="user" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 52px;">
+                <input name="username" class="form-control" id="user" aria-describedby="emailHelp" placeholder="Email or Phone Number" style="height: 52px;">
               </div>
               <div id="input-credentials2" class="form-group">
-                <input type="password" class="form-control" id="password" placeholder="Password" style="height: 52px;">
+                <input name="password" type="password" class="form-control" id="password" placeholder="Password" style="height: 52px;">
               </div>
                 <input type="submit" value="Login" id="login-btn" class="btn btn-primary">
                 <button id="forget-btn" type="login" class="btn btn-link">Forgot account?</button>
